--- a/src/css/tabs/pid_tuning.css
+++ b/src/css/tabs/pid_tuning.css
@@ -1,22 +1,13 @@
 .rate-tpa_input {
-    width: 150px;
-    height: 20px;
-    line-height: 20px;
-    border: 1px solid silver;
-    border-radius: 3px;
-    padding-left: 3px;
-    text-align: left;
-    font-size: 12px;
-    font-weight: normal;
-    display: inline-block;
 }
 
 .settings-table.settings-table--inav td,
 .settings-table.settings-table--filtering td,
 .settings-table.settings-table--misc td {
-    background-color: #f3f3f3;
+    /*background-color: #f3f3f3;*/
     width: auto;
-    border-bottom: 1px solid #ccc;
+    padding: 7px;
+    border: var(--inav-border-width) var(--inav-border-color) solid;
 }
 
 .settings-table.settings-table--filtering th,
@@ -25,12 +16,10 @@
 }
 
 .settings-table th {
-    background-color: #828885;
-    padding: 4px;
-    border-left: 0 solid #ccc;
-    border-bottom: 1px solid #ccc;
-    font-weight: bold;
-    color: white;
+    background-color: var(--inav-tertiary-bg);
+    padding: 7px;
+    border-left: 0;
+    border: var(--inav-border-width) var(--inav-border-color) solid;
     text-align: left;
     width: 12em;
 }
@@ -61,8 +50,6 @@
 .tab-pid_tuning .cf input {
     margin: 4px;
     width: calc(100% - 10px);
-    border: 1px solid silver;
-    border-radius: 3px;
 }
 
 .tab-pid_tuning .cf select {
@@ -71,25 +58,22 @@
 }
 
 .settings-table tr:first-child th {
-    border-top-left-radius: 5px;
+    border-top-left-radius: var(--inav-border-radius);
 }
 
 .settings-table tr:first-child td {
-    border-top-right-radius: 5px;
+    border-top-right-radius: var(--inav-border-radius);
 }
 
 .settings-table tr:last-child th {
-    border-bottom-left-radius: 5px;
-    border-bottom: none;
+    border-bottom-left-radius: var(--inav-border-radius);
 }
 
 .settings-table tr:last-child td {
-    border-bottom-right-radius: 5px;
-    border-bottom: none;
+    border-bottom-right-radius: var(--inav-border-radius);
 }
 
 .settings-table {
-    /*border: 0px solid #ccc; */
     margin-bottom: 10px;
 }
 
@@ -110,14 +94,15 @@
 
 .tab-pid_tuning table, .tab-pid_tuning table td {
     padding: 1px;
-    border-bottom: 0 solid #ccc;
+    border-bottom: 0;
+    border-collapse: separate;
+    border-spacing: 0;
 }
 
 .tab-pid_tuning .pid_titlebar th {
     padding: 5px;
     text-align: left;
-    border-right: 1px solid #ccc;
-    /* width: calc(100% -1px); */
+    border: var(--inav-border-width) var(--inav-border-color) solid;
     width: 20%;
 }
 
@@ -135,13 +120,13 @@
 }
 
 .tab-pid_tuning table tr td:last-child {
-    border-right: 0 solid #ccc;
+    /*border-right: 0;*/
 }
 
 .tab-pid_tuning table td {
     padding: 1px;
     width: 20%;
-    border-right: 1px solid #ccc;
+    border-right: var(--inav-border-width) var(--inav-border-color) solid;
 }
 
 .tab-pid_tuning table tr td {
@@ -151,11 +136,12 @@
 
 .pid-section input {
     display: block;
-    width: calc(100% - 0px);
-    height: 20px;
+    width: calc(100% - .5rem - 2px);
+    background-color: var(--inav-body-bg);
     line-height: 20px;
     text-align: right;
     border: none;
+    border-radius: 0;
 }
 
 .tab-pid_tuning .profile {
@@ -230,21 +216,12 @@
     text-align: left;
     line-height: 13px;
     padding: 8px 0 0 5px;
-    font-size: 12px;
-    border-bottom: 1px solid #ccc;
-    color: #828282;
-    font-family: 'open_sans', Arial, serif;
-    background: #D6D6D6 linear-gradient(-45deg, rgba(255, 255, 255, .2) 10%, transparent 10%, transparent 20%,
-    rgba(255, 255, 255, .2) 20%, rgba(255, 255, 255, .2) 30%, transparent 30%, transparent 40%,
-    rgba(255, 255, 255, .2) 40%, rgba(255, 255, 255, .2) 50%, transparent 50%, transparent 60%,
-    rgba(255, 255, 255, .2) 60%, rgba(255, 255, 255, .2) 70%, transparent 70%, transparent 80%,
-    rgba(255, 255, 255, .2) 80%, rgba(255, 255, 255, .2) 90%, transparent 90%, transparent 100%,
-    rgba(255, 255, 255, .2) 100%, transparent);
+    border-bottom: var(--inav-border-width) var(--inav-border-color) solid;
+    background-color: rgba(var(--inav-emphasis-color-rgb), 0.1);;
 }
 
 .pid_titlebar {
-    color: #fff;
-    background-color: #828885;
+    background-color: rgba(var(--inav-emphasis-color-rgb), 0.1);
     border-top-left-radius: 3px;
     border-top-right-radius: 3px;
     height: 20px;
@@ -320,13 +297,6 @@
 
 .tab-pid_tuning .number input {
     width: 50px;
-    padding-left: 3px;
-    height: 20px;
-    line-height: 20px;
-    text-align: left;
-    border: 1px solid silver;
-    border-radius: 3px;
-    font-weight: normal;
 }
 
 .tab-pid_tuning .gui_box span {
@@ -413,11 +383,6 @@
 
 .pid-slider-row input[type="number"],
 .pid-switch-row input[type="number"] {
-    background-color: #fff;
-    border: 1px solid #ccc;
-    font-size: 0.95em;
-    border-radius: 3px;
-    padding: 0.3em;
     margin-right: 2em;            
 }
 
@@ -431,32 +396,47 @@
 .pid-sliders-axis {
     padding: 0.5em;
     margin-bottom: 1em;
+    border-radius: var(--inav-border-radius);
 }
 
 .pid-sliders-axis h3 {
     padding: 4px;
 }
 
+.pid-sliders-axis.ez-tune-switcher {
+    background-color: var(--inav-success-bg-subtle);
+    border: var(--inav-border-width) var(--inav-success-border-subtle) solid;
+    color: var(--inav-success-text-emphasis);
+}
+
 .pid-sliders-axis[data-axis="roll"],
 .pid-sliders-axis[data-axis="0"] {
-    background-color: #8ecae6;
+    background-color: var(--inav-primary-bg-subtle);
+    border: var(--inav-border-width) var(--inav-primary-border-subtle) solid;
+    color: var(--inav-primary-text-emphasis);
 }
 
 .pid-sliders-axis[data-axis="pitch"],
 .pid-sliders-axis[data-axis="1"]
  {
-    background-color: #00b4d8;
+    background-color: var(--inav-info-bg-subtle);
+    border: var(--inav-border-width) var(--inav-info-border-subtle) solid;
+    color: var(--inav-info-text-emphasis);
 }
 
 .pid-sliders-axis[data-axis="yaw"],
 .pid-sliders-axis[data-axis="2"]
 {
-    background-color: #e9c46a;
+    background-color: var(--inav-warning-bg-subtle);
+    border: var(--inav-border-width) var(--inav-warning-border-subtle) solid;
+    color: var(--inav-warning-text-emphasis);
 }
 
 .pid-sliders-axis[data-axis="3"]
 {
-    background-color: #f4a261;
+    background-color: var(--inav-danger-bg-subtle);
+    border: var(--inav-border-width) var(--inav-danger-border-subtle) solid;
+    color: var(--inav-danger-text-emphasis);
 }
 
 #pid-sliders {
@@ -464,12 +444,16 @@
 }
 
 .tab-pid_tuning .expo-chart {
-    margin: 0 0px 0px 0;
+    --paper-line: rgba(var(--inav-secondary-color-rgb), .05);
+
+    margin: 0;
     width: 200px;
     height: 117px;
-    border: 1px solid silver;
-    border-radius: 3px;
-    background-image: url(./../../../images/paper.jpg);
-    background-size: 200%;
-    background-position: center;
+    border: var(--inav-border-width) var(--inav-border-color) solid;
+    border-radius: var(--inav-border-radius);
+    background-color: var(--inav-body-bg);
+    background-image: linear-gradient(to right, var(--paper-line) 0, var(--paper-line) 1px, transparent 1px, transparent 100% ),
+    linear-gradient( to bottom, var(--paper-line) 0, var(--paper-line) 1px, transparent 1px, transparent 100% );
+    background-position: -1px 0, 0 -1px;
+    background-size: 16px 16px;
 }
